--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -816,23 +816,35 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>20310</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_annusa0</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== annusa0</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20320</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_annusa</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== annusa</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20330</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_ascolta0</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== ascolta0</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20320</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20340</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_ascolta</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== ascolta</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20330</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20350</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_tocca</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== tocca</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20340</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20360</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_tocca_con</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== tocca_con</p></td>
