--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.8-Alpha,</span>
-<span id="revdate">2018-10-24</span>
+<span id="revnumber">versione 0.7.9-Alpha,</span>
+<span id="revdate">2018-10-31</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -505,6 +505,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
 <pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  CAN abbandonare_partita.      ---&gt; 'quit'
   CAN accendere.                ---&gt; turn_on
   CAN andare_a.                 ---&gt; go_to
+  CAN annusare.                 ---&gt; smell
   CAN aprire.                   ---&gt; open
   CAN aprire_con.               ---&gt; open_with
   CAN ascoltare.                ---&gt; listen + listen0 | ascolta0 + ascolta
@@ -750,8 +751,7 @@ italiano del modulo delle definizioni.</p>
   CAN shoot.       -- (at)
   CAN shoot_with.
   CAN sip.
-  CAN smell0.
-  CAN smell.
+--CAN smell0. --------------------&gt; ** ATTRIBUTO ELIMINATO **
   CAN squeeze.
   CAN stand.       -- (up)
   CAN stand_on.
@@ -778,7 +778,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.8-Alpha<br>
+Versione 0.7.9-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
