--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.13-Alpha,</span>
-<span id="revdate">2018-10-31</span>
+<span id="revnumber">versione 0.7.14-Alpha,</span>
+<span id="revdate">2018-11-01</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -528,6 +528,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_parla_con">parla_con</a></li>
 <li><a href="#_racconta">racconta</a></li>
 <li><a href="#_rispondi">rispondi</a></li>
+</ul>
+</li>
+<li><a href="#_mangiare_e_bere">Mangiare e Bere</a>
+<ul class="sectlevel3">
+<li><a href="#_bevi">bevi</a></li>
+<li><a href="#_mangia">mangia</a></li>
+<li><a href="#_sorseggia">sorseggia</a></li>
 </ul>
 </li>
 </ul>
@@ -1425,6 +1432,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>sorseggia</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">sorseggia (liq)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>spegni</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">spegni (disp)</p></td>
@@ -2050,6 +2066,81 @@ non decido in quale gruppo spostarli.</p>
 
 </div>
 </div>
+<div class="sect2">
+<h3 id="_mangiare_e_bere"><a class="anchor" href="#_mangiare_e_bere"></a>Mangiare e Bere</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi che riguardano mangiare e bere:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>bevi</code></p>
+</li>
+<li>
+<p><code>mangia</code></p>
+</li>
+<li>
+<p><code>sorseggia</code></p>
+</li>
+</ul>
+</div>
+<table class="tableblock frame-all grid-all stretch">
+<colgroup>
+<col style="width: 15%;">
+<col style="width: 25%;">
+<col style="width: 60%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">verbo</th>
+<th class="tableblock halign-left valign-top">sintassi</th>
+<th class="tableblock halign-left valign-top">parametri</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>bevi</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">bevi (liq)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">liq è <code>potabile</code></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>mangia</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">mangia (cibo)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">cibo è <code>commestibile</code></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>sorseggia</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">sorseggia (liq)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">liq è <code>potabile</code></p></td>
+</tr>
+</tbody>
+</table>
+<div class="paragraph">
+<p>Verbi di questo gruppo non ancora tradotti:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>bite</code></p>
+</li>
+<li>
+<p><code>taste</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_bevi"><a class="anchor" href="#_bevi"></a>bevi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_mangia"><a class="anchor" href="#_mangia"></a>mangia</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_sorseggia"><a class="anchor" href="#_sorseggia"></a>sorseggia</h4>
+
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2439,13 +2530,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>sip</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">sip (liq)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>squeeze</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">squeeze (obj)</p></td>
@@ -2649,6 +2733,15 @@ italiano del modulo dei verbi.</p>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>rispondi</code>.</p>
 </li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>bevi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>mangia</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>sorseggia</code>.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -2657,7 +2750,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.13-Alpha<br>
+Versione 0.7.14-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
