--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.9-Alpha,</span>
-<span id="revdate">2018-10-31</span>
+<span id="revnumber">versione 0.7.10-Alpha,</span>
+<span id="revdate">2018-11-01</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -600,6 +600,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN sedersi.                  ---&gt; sit (down)
   CAN sedersi_su.               ---&gt; sit_on
   CAN seguire.                  ---&gt; follow
+  CAN sorseggiare.              ---&gt; sip
   CAN spegnere.                 ---&gt; turn_off
   CAN spingere.                 ---&gt; push
   CAN spingere_con.             ---&gt; push_with
@@ -750,7 +751,6 @@ italiano del modulo delle definizioni.</p>
   CAN shake.
   CAN shoot.       -- (at)
   CAN shoot_with.
-  CAN sip.
 --CAN smell0. --------------------&gt; ** ATTRIBUTO ELIMINATO **
   CAN squeeze.
   CAN stand.       -- (up)
@@ -778,7 +778,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.9-Alpha<br>
+Versione 0.7.10-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
