Translate Verb `taste`

--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.14-Alpha,</span>
-<span id="revdate">2018-11-01</span>
+<span id="revnumber">versione 0.7.15-Alpha,</span>
+<span id="revdate">2018-11-02</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -532,6 +532,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_mangiare_e_bere">Mangiare e Bere</a>
 <ul class="sectlevel3">
+<li><a href="#_assaggia">assaggia</a></li>
 <li><a href="#_bevi">bevi</a></li>
 <li><a href="#_mangia">mangia</a></li>
 <li><a href="#_sorseggia">sorseggia</a></li>
@@ -880,6 +881,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>assaggia</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">lecca</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">assaggia (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -1927,17 +1937,6 @@ luce e dispositivi:</p>
 </ul>
 </div>
 <div class="paragraph">
-<p>Verbi non tradotti appartenenti a questo gruppo:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><code>taste</code> (oppure in altro gruppo, assieme a <code>mangia</code>? in fondo riguarda il
-senso del gusto)</p>
-</li>
-</ul>
-</div>
-<div class="paragraph">
 <p>Il verbo <code>guarda</code> andrebbe in questo gruppo o con <code>esamina</code>?</p>
 </div>
 <div class="admonitionblock note">
@@ -2074,6 +2073,9 @@ non decido in quale gruppo spostarli.</p>
 <div class="ulist">
 <ul>
 <li>
+<p><code>assaggia</code></p>
+</li>
+<li>
 <p><code>bevi</code></p>
 </li>
 <li>
@@ -2099,6 +2101,11 @@ non decido in quale gruppo spostarli.</p>
 </thead>
 <tbody>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>assaggia</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">assaggia (ogg)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ogg è <code>commestibile</code> o <code>potabile</code></p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>bevi</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">bevi (liq)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">liq è <code>potabile</code></p></td>
@@ -2123,10 +2130,11 @@ non decido in quale gruppo spostarli.</p>
 <li>
 <p><code>bite</code></p>
 </li>
-<li>
-<p><code>taste</code></p>
-</li>
 </ul>
+</div>
+<div class="sect3">
+<h4 id="_assaggia"><a class="anchor" href="#_assaggia"></a>assaggia</h4>
+
 </div>
 <div class="sect3">
 <h4 id="_bevi"><a class="anchor" href="#_bevi"></a>bevi</h4>
@@ -2565,13 +2573,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>taste</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">lick</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">taste (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>tear</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">rip</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">tear (obj)</p></td>
@@ -2734,6 +2735,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>rispondi</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>assaggia</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>bevi</code>.</p>
 </li>
 <li>
@@ -2750,7 +2754,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.14-Alpha<br>
+Versione 0.7.15-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
