--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revdate">2018-11-01</span>
+<span id="revdate">2018-11-02</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -912,17 +912,23 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>20510</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_assaggia</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== assaggia</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20520</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_bevi</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== bevi</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20520</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20530</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_mangia</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== mangia</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20530</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20540</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_sorseggia</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== sorseggia</p></td>
