Translate `empty*` and `pour*`
Translated the verbs of the group `empty*` and `pour*`:

|  English   |   Italian   |
|------------|-------------|
| `empty`    | `svuota`    |
| `empty_in` | `svuota_in` |
| `empty_on` | `svuota_su` |
| `pour`     | `versa`     |
| `pour_in`  | `versa_in`  |
| `pour_on`  | `versa_su`  |

Also translated various verb response attributes and created new ones.

Add tests for this group of verbs.

--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.15-Alpha,</span>
+<span id="revnumber">versione 0.7.16-Alpha,</span>
 <span id="revdate">2018-11-02</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -536,6 +536,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_bevi">bevi</a></li>
 <li><a href="#_mangia">mangia</a></li>
 <li><a href="#_sorseggia">sorseggia</a></li>
+</ul>
+</li>
+<li><a href="#_svuotare_e_versare">Svuotare e Versare</a>
+<ul class="sectlevel3">
+<li><a href="#_svuota_versa">svuota + versa</a></li>
+<li><a href="#_svuota_in_versa_in">svuota_in + versa_in</a></li>
+<li><a href="#_svuota_su_versa_su">svuota_su + versa_su</a></li>
 </ul>
 </li>
 </ul>
@@ -1478,6 +1485,33 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>svuota</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">svuota (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>svuota_in</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">svuota (ogg) in (cont)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>svuota_su</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">svuota (ogg) su (superficie)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>taglia</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">taglia (ogg)</p></td>
@@ -1592,6 +1626,33 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>versa</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">versa (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>versa_in</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">versa (ogg) in (cont)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>versa_su</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">versa (ogg) su (superficie)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 </tbody>
@@ -2149,6 +2210,58 @@ non decido in quale gruppo spostarli.</p>
 
 </div>
 </div>
+<div class="sect2">
+<h3 id="_svuotare_e_versare"><a class="anchor" href="#_svuotare_e_versare"></a>Svuotare e Versare</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per svuotare i contenitori e versarne il
+contenuto (a terra o su/in un altro contenitore):</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>svuota</code></p>
+</li>
+<li>
+<p><code>svuota_in</code></p>
+</li>
+<li>
+<p><code>svuota_su</code></p>
+</li>
+<li>
+<p><code>versa</code></p>
+</li>
+<li>
+<p><code>versa_in</code></p>
+</li>
+<li>
+<p><code>versa_su</code></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>In questo modulo, i verbi <code>svuota</code> e <code>versa</code> hanno sintassi e comportamento
+simili; tuttavia non sono dichiarati sinonimi (ossia, hanno sintassi
+indipendenti) poiché il loro uso non si sovrappone del tutto. Per esempio, è
+possibile versare un liquido ma non svuotarlo.</p>
+</div>
+<div class="paragraph">
+<p>Questa è la ragione per cui in <code>lib_classi.i</code> questi verbi sono ridefiniti
+nella classe <code>liquido</code> affinché si possa utilizzare il verbo <code>versa</code> con un
+liquido ma non il verbo <code>svuota</code>.</p>
+</div>
+<div class="sect3">
+<h4 id="_svuota_versa"><a class="anchor" href="#_svuota_versa"></a>svuota + versa</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_svuota_in_versa_in"><a class="anchor" href="#_svuota_in_versa_in"></a>svuota_in + versa_in</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_svuota_su_versa_su"><a class="anchor" href="#_svuota_su_versa_su"></a>svuota_su + versa_su</h4>
+
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -2249,27 +2362,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">dive in (liq)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>empty</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">empty (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>empty_in</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">empty (obj) in (cont)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>empty_on</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">empty (obj) on (surface)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>enter</code></p></td>
@@ -2388,27 +2480,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">lift (obj)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>pour</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">(= defined at the verb <code>empty</code>)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">pour (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>pour_in</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">(= defined at the verb <code>emtpy_in</code>)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">pour (obj) in (cont)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>pour_on</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">(= defined at the verb <code>empty_on</code>)</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">pour (obj) on (surface)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
@@ -2746,6 +2817,15 @@ italiano del modulo dei verbi.</p>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>sorseggia</code>.</p>
 </li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>svuota</code> + <code>versa</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>svuota_in</code> + <code>versa_in</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>svuota_su</code> + <code>versa_su</code>.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -2754,7 +2834,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.15-Alpha<br>
+Versione 0.7.16-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
