--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -934,6 +934,30 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== sorseggia</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20600</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_svuota</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Svuotare e Versare</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20610</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_svuota</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== svuota + versa</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20620</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_svuota_in</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== svuota_in + versa_in</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20630</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>verbo_svuota_su</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== svuota_su + versa_su</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>30000</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_comandi_domande</code></p></td>
@@ -986,16 +1010,112 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 </thead>
 <tbody>
 <tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>intro</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Introduzione</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>elenco_classi</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Elenco e Descrizione delle Classi</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>10000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>vestiario</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Vestiario</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10900</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>vestiario_istruzioni</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Istruzioni per l&#8217;Uso del Vestiario</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10950</code></p></td>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_vestiario_intro</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">== La Tabella del Vestiario</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10960</code></p></td>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>tabella_vestiario</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">[tabella vestiario]</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>11000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>dispositivi</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Dispositivi</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>12000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>porte</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Porte</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>13000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>finestre</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Finestre</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>14000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>fonte_di_luce</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Fonti di Luce</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>15000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>liquido</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Liquidi</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>16000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>contenitore_elencato</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Contenitore Elencato</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>17000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>suono</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Suoni</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>18000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>supporto</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Supporti</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>19000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>arma</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Armi</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>classi_attori</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Attori</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>21000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>sottoclassi_attori</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Sottoclassi di ACTOR</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>30000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>oggetti_fittizi</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Oggetti Fittizi</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>50000</code></p></td>
