--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.16-Alpha,</span>
-<span id="revdate">2018-11-02</span>
+<span id="revnumber">versione 0.7.17-Alpha,</span>
+<span id="revdate">2018-11-03</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -535,6 +535,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_assaggia">assaggia</a></li>
 <li><a href="#_bevi">bevi</a></li>
 <li><a href="#_mangia">mangia</a></li>
+<li><a href="#_mordi">mordi</a></li>
 <li><a href="#_sorseggia">sorseggia</a></li>
 </ul>
 </li>
@@ -1257,6 +1258,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>mordi</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">mordi (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -2143,6 +2153,9 @@ non decido in quale gruppo spostarli.</p>
 <p><code>mangia</code></p>
 </li>
 <li>
+<p><code>mordi</code></p>
+</li>
+<li>
 <p><code>sorseggia</code></p>
 </li>
 </ul>
@@ -2177,22 +2190,17 @@ non decido in quale gruppo spostarli.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">cibo è <code>commestibile</code></p></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>mordi</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">mordi (ogg)</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ogg è <code>commestibile</code></p></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>sorseggia</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">sorseggia (liq)</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">liq è <code>potabile</code></p></td>
 </tr>
 </tbody>
 </table>
-<div class="paragraph">
-<p>Verbi di questo gruppo non ancora tradotti:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><code>bite</code></p>
-</li>
-</ul>
-</div>
 <div class="sect3">
 <h4 id="_assaggia"><a class="anchor" href="#_assaggia"></a>assaggia</h4>
 
@@ -2203,6 +2211,10 @@ non decido in quale gruppo spostarli.</p>
 </div>
 <div class="sect3">
 <h4 id="_mangia"><a class="anchor" href="#_mangia"></a>mangia</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_mordi"><a class="anchor" href="#_mordi"></a>mordi</h4>
 
 </div>
 <div class="sect3">
@@ -2313,13 +2325,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">about</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>bite</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">chew</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">bite (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>catch</code></p></td>
@@ -2815,6 +2820,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>mangia</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>mordi</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>sorseggia</code>.</p>
 </li>
 <li>
@@ -2834,7 +2842,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.16-Alpha<br>
+Versione 0.7.17-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
