--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.10-Alpha,</span>
-<span id="revdate">2018-11-01</span>
+<span id="revnumber">versione 0.7.11-Alpha,</span>
+<span id="revdate">2018-11-03</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -563,6 +563,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN mangiare.                 ---&gt; eat
   CAN modalità_breve.           ---&gt; brief
   CAN modalità_lunga.           ---&gt; verbose
+  CAN mordere.                  ---&gt; bite (+ chew)
   CAN mostrare.                 ---&gt; 'show'       (+ reveal)
   CAN notificare.               ---&gt; 'notify'
   CAN notificare_off.           ---&gt; notify_off
@@ -718,7 +719,6 @@ italiano del modulo delle definizioni.</p>
 <div class="listingblock">
 <div class="content">
 <pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  CAN about.
-  CAN bite.        -- (+ chew)
   CAN catch.
   CAN climb.
   CAN climb_on.
@@ -778,7 +778,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.10-Alpha<br>
+Versione 0.7.11-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
